[package]
name = "tars-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared core types for TARS Runtime (Doc 01 §4)"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
url.workspace = true
tokio-util.workspace = true
reqwest.workspace = true  # for ProviderError::from(reqwest::Error)
uuid.workspace = true     # PipelineEvent.event_id (B-20 W3 enabler)
# Zero-dep mechanism crate (sits below everything). Carried so RequestContext
# can hand a SandboxPolicy to subprocess-spawning providers (CLI delegates),
# the same reason `cwd` lives here (G10 — unify the CLI sandbox on the policy).
tars-sandbox = { path = "../tars-sandbox" }

[dev-dependencies]
serde_json.workspace = true
toml = "0.8"
