[package]
name = "tars-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure, dependency-free helpers over tars-types (stateless algorithms — no I/O, no state)"

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
